<resources>
    <string name="app_name">Foodie Go</string>

    <string name="welcomeMessage">Welcome!</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButton">Create Account</string>
    <string name="logoDescription">Logo</string>
    <string name="credentials_preferences">credentials_preferences</string>
    <string name="stored_username_key">stored_username</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="stored_firstname_key">stored_firstname_key</string>
    <string name="stored_lastname_key">stored_lastname_key</string>
...
    <string name="activity_list_label">Activity</string>
    <string name="claim_token_menu_item">Claim Token</string>
    <string name="leave_review_menu_item">Leave Review</string>
    <string name="leave_review_content_desc">Leave Review</string>
    <string name="claim_token_content_desc">Claim Token</string>
    <string name="person_icon_desc">person icon</string>
    <string name="social_feed_menu_item">Social Feed</string>
    <string name="post_activity_content_desc">Post Activity</string>
    <string name="postButton">Post</string>
    <string name="location_prompt">Location</string>
    <string name="social_activity_prompt">What did you do there?</string>
    <string name="recommendButton">Recommend something!</string>
    <string name="get_reccomendation_content_desc">Get Reccomendation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
