...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/getRecommendationFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/get_reccomendation_content_desc"
...
        android:id="@+id/mapFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapInfoFragment">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/mapInfoFragment"
        android:layout_width="match_parent"
...
